# ModelViewer

./: 3d  3d.cpp  3d.txt  ModelViewer  ModelViewer.cpp  Spdr3dModel.cpp  Spdr3dModel.hpp  SpdrModelViewer  SpdrModelViewer.cpp  makefile  oper.csv  source.csv  ~ModelParser.c
src/: CMakeLists.txt  ModelViewer.cpp  Spdr3dModel.cpp  Spdr3dModel.hpp
